--- a/src/Code/assignment-1.ipynb
+++ b/src/Code/assignment-1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Author: Lucy Wu*\n",
+    "\n",
+    "*Date: 02/16/2025*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
